# pwscp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  go.mod
cmd/pwscp/: main.go
internal/appStrings/: strings.go
internal/pipewireInterface/: pw.go
internal/userInterface/: mainWindow.go  mainWindow.ui  systemTray.go  typo.go
src/: main.cpp
src/appStrings/: AppStrings.cpp  AppStrings.h
src/audioAPI/: Pipewire.cpp  Pipewire.h  alsa.cpp  alsa.h  soundcard.cpp
src/ui/: mainWindow.cpp  mainWindow.h  mainWindow.ui  platformTheme.cpp  platformTheme.h  typo.h
src/utils/: utils.cpp  utils.h
